[package]
name = "rutor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
macroquad = "0.4.8"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["net", "rt-multi-thread", "macros", "sync", "time", "io-util"] }

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"
